unpackaged/main/default/objects/Account/fields/Demo_Field__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-Field</label>
    <type>Checkbox</type>
</CustomField>