unpackaged/main/default/objects/Account/fields/Feature4__c.field-meta.xml
<CustomField>
    <fullName>Feature4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature4</label>
    <type>Checkbox</type>
</CustomField>