unpackaged/main/default/objects/Account/fields/New_Demo_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Demo_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Demo Field</description>
    <label>New Demo Field</label>
    <type>Checkbox</type>
</CustomField>