unpackaged/main/default/objects/Account/fields/NewFeature10__c.field-meta.xml
<CustomField>
    <fullName>NewFeature10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFeature10</label>
    <type>Checkbox</type>
</CustomField>