unpackaged/main/default/objects/Account/fields/NewFeature11__c.field-meta.xml
<CustomField>
    <fullName>NewFeature11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFeatur11</label>
    <type>Checkbox</type>
</CustomField>