unpackaged/main/default/objects/Account/fields/NewFeature12__c.field-meta.xml
<CustomField>
    <fullName>NewFeature12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFeature12</label>
    <type>Checkbox</type>
</CustomField>