unpackaged/main/default/objects/Account/fields/Revenue_2023__c.field-meta.xml
<CustomField>
    <fullName>Revenue_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue 2023</label>
    <type>Checkbox</type>
</CustomField>